--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi== 0.103.1
-uvicorn==0.23.2
-pydantic== 1.8.2
-sentence-transformers==2.2.2
+fastapi
+uvicorn
+pydantic
+sentence-transformers
 
